--- a/holamundo.html
+++ b/holamundo.html
@@ -1,14 +1,5 @@
 <!DOCTYPE html>
-<!--
-Created using JS Bin
-http://jsbin.com
-
-Copyright (c) 2024 by anonymous (http://jsbin.com/ruvanorode/1/edit)
-
-Released under the MIT license: http://jsbin.mit-license.org
--->
-<meta name="robots" content="noindex">
-<html>
+=<html>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
